--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ a:focus {
 }
 a:hover,
 a:focus {
-    color: #7beec7;
+    color: #66DEE6;
     text-decoration: none;
 }
 a,
@@ -305,7 +305,7 @@ ul.sublist {
 }
 .pagination-ef li a:hover {
     color: #333;
-    background-color: #7beec7;
+    background-color: #66DEE6;
 }
 .pagination-ef li {
     line-height: 48px;
@@ -315,7 +315,7 @@ ul.sublist {
     text-align: center;
 }
 .pagination-ef li.current a, .pagination-ef li span.page-numbers.current {
-    background-color: #7beec7;
+    background-color: #66DEE6;
 }
 .pagination-ef i {
     font-size: 30px;
@@ -495,7 +495,7 @@ a:hover>span.site-name{
 }
 .slider-description-inner h1 span {
     font-family: 'azedolight';
-    background: #7beec7;
+    background: #66DEE6;
     padding: 22px;
     font-weight: 100;
     margin-left: 10px;
@@ -723,7 +723,7 @@ svg {
     left: 0;
 }
 .slider .slide .slide__overlay-path {
-    fill: #7beec7;
+    fill: #66DEE6;
 }
 .slider .slide:nth-child(2) {
     left: 100%;
@@ -891,7 +891,7 @@ span.border-text {
 }
 .slider-controls a:hover,
 .slider-controls a i:hover {
-    color: #7beec7;
+    color: #66DEE6;
 }
 /* =Menu right
 -------------------------------------------------------------- */
@@ -919,7 +919,7 @@ span.border-text {
 }
 .close-menu:hover,
 .search-icon:hover {
-    color: #7beec7;
+    color: #66DEE6;
 }
 /* search */
 .js-ui-search input[type="text"] {
@@ -1059,7 +1059,7 @@ span.border-text {
 }
 .menu-wrap a:hover,
 .menu-wrap a:focus {
-    color: #7beec7;
+    color: #66DEE6;
 }
 .content-wrap {
     -webkit-overflow-scrolling: touch;
@@ -1479,7 +1479,7 @@ ul.sub-menu li a {
 .newsletter-left {
     height: 325px;
     width: 100%;
-    background-color: #7beec7;
+    background-color: #66DEE6;
     display: table;
     text-align: center;
 }
@@ -1500,7 +1500,7 @@ ul.sub-menu li a {
     position: relative;
     height: 325px;
     width: 100%;
-    background-color: #7beec7;
+    background-color: #66DEE6;
     display: table;
     text-align: center;
 }
@@ -1523,13 +1523,13 @@ ul.sub-menu li a {
     padding-right: 20px;
 }
 .newsletter-right-inner input:focus {
-    border: 1px solid #7beec7;
+    border: 1px solid #66DEE6;
 }
 .newsletter-right-inner input[type=submit] {
     margin-top: 15px;
     max-width: 175px;
     margin: auto;
-    background: #7beec7;
+    background: #66DEE6;
     border: 0;
     margin-top: 30px;
     color: #fff;
@@ -1573,7 +1573,7 @@ ul.sub-menu li a {
     text-align: center;
 }
 .tabs-wrapper {
-    background-color: #7beec7;
+    background-color: #66DEE6;
     min-height: 330px;
     width: 100%;
     padding: 40px;
@@ -1633,7 +1633,7 @@ ul.sub-menu li a {
     width: 100%;
 }
 .our-story-content {
-    background-color: #7beec7;
+    background-color: #66DEE6;
     margin-top: 50px;
     height: 400px;
     display: table;
@@ -1785,7 +1785,7 @@ ul.client-thumb-2 li a img:hover{
     -o-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     backface-visibility: hidden;
-    background: #86eecb;
+    background: #66DEE6;
     cursor: pointer;
     border: none;
     width: 48px;
@@ -1922,7 +1922,7 @@ ul.client-thumb-2 li a img:hover{
     transition-duration: 200ms
 }
 .works-filter a.active {
-    color: #7beec7;
+    color: #66DEE6;
 }
 .works-filter a:before {
     padding-right: 20px;
@@ -1989,7 +1989,7 @@ ul.client-thumb-2 li a img:hover{
     z-index: 4;
 }
 .img .overlay-thumb:hover {
-    background-color: rgba(123, 238, 199, .9);
+    background-color: rgba(102, 222, 230, 0.9);
 }
 
 .img .overlay-thumb.bg-white:hover{
@@ -2302,15 +2302,15 @@ span.press {
 .single-project-slider .single-controls .arrow-left a:hover,
 .single-project-slider .single-controls .arrow-right a:hover {
     color: #fff;
-    background: #7beec7;
-    border: 1px solid #7beec7;
+    background: #66DEE6;
+    border: 1px solid #66DEE6;
 }
 .single-project-slider .single-controls .arrow-right {
     right: 20px;
 }
 .single-project-slider .slider-controls a:hover,
 .slider-controls a i:hover {
-    color: #7beec7;
+    color: #66DEE6;
 }
 .single-portfolio-wrapper {
     margin-top: 50px
@@ -2398,7 +2398,7 @@ ul.social-buttons li {
     transform: translate(100%, 0);
     transition: all .3s ease-in-out;
     font-size: 10px;
-    background: #7beec7;
+    background: #66DEE6;
 }
 
 /*Similar Project*/
@@ -2579,7 +2579,7 @@ ul.social-buttons li {
 }
 .share-buttons ul li a:hover,
 .share-buttons ul li a i:hover {
-    color: #7beec7;
+    color: #66DEE6;
 }
 .blog-tags ul {
     padding: 0 0 0 6px;
@@ -2599,7 +2599,7 @@ ul.social-buttons li {
 .blog-tags ul li a:hover,
 .blog-tags ul li:hover {
     color: #fff;
-    background: #7beec7;
+    background: #66DEE6;
 }
 .full-blog-content {
     margin-top: 30px;
@@ -2798,7 +2798,7 @@ ul.social-buttons li {
     height: 48px;
     outline: 0;
     border: 0;
-    background-color: #7beec7;
+    background-color: #66DEE6;
     font-size: 18px;
     color: #fff;
     font-weight: 500;
@@ -2864,7 +2864,7 @@ input[type="text"] {
     padding: 8px;
 }
 .page-error p a {
-    color: #7beec7;
+    color: #66DEE6;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -2914,7 +2914,7 @@ ul.social-media li a i {
     color: #111111;
 }
 ul.social-media li a i:hover {
-    color: #7beec7;
+    color: #66DEE6;
 }
 .copyright-mark {
     margin-top: 50px;
