--- a/css/tabstyles.css
+++ b/css/tabstyles.css
@@ -21,7 +21,7 @@
 
 .tabs-style-bar nav ul li a:hover,
 .tabs-style-bar nav ul li a:focus {
-	color: #2CC185;
+	color: #66DEE6;
 }
 
 .tabs-style-bar nav ul li a span {
@@ -32,7 +32,7 @@
 }
 
 .tabs-style-bar nav ul li.tab-current a {
-	background: #2CC185;
+	background: #66DEE6;
 	color: #fff;
 }
 
@@ -127,7 +127,7 @@
 	left: 0;
 	width: 100%;
 	height: 6px;
-	background: #2CC185;
+	background: #66DEE6;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
@@ -210,7 +210,7 @@
 }
 
 .tabs-style-topline nav li.tab-current {
-	border-top-color: #2CC185;
+	border-top-color: #66DEE6;
 	border-bottom: none;
 }
 
@@ -225,13 +225,13 @@
 
 .tabs-style-topline nav a:hover,
 .tabs-style-topline nav a:focus {
-	color: #2CC185;
+	color: #66DEE6;
 }
 
 .tabs-style-topline nav li.tab-current a {
 	background: none;
-	box-shadow: inset 0 3px 0 #2CC185;
-	color: #2CC185;
+	box-shadow: inset 0 3px 0 #66DEE6;
+	color: #66DEE6;
 }
 
 .tabs-style-topline .icon::before {
@@ -267,7 +267,7 @@
 .tabs-style-iconfall nav a:hover,
 .tabs-style-iconfall nav a:focus,
 .tabs-style-iconfall nav li.tab-current a {
-	color: #2CC185;
+	color: #66DEE6;
 }
 
 .tabs-style-iconfall nav a span {
@@ -281,7 +281,7 @@
 	margin-left: -20px;
 	width: 40px;
 	height: 4px;
-	background: #2CC185;
+	background: #66DEE6;
 	content: '';
 	opacity: 0;
 	-webkit-transition: -webkit-transform 0.2s ease-in;
@@ -335,7 +335,7 @@
 	left: 0;
 	width: 100%;
 	height: 4px;
-	background: #2CC185;
+	background: #66DEE6;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
@@ -371,7 +371,7 @@
 }
 
 .tabs-style-linemove nav li.tab-current a {
-	color: #2CC185;
+	color: #66DEE6;
 	-webkit-transform: translate3d(0,8px,0);
 	transform: translate3d(0,8px,0);
 }
@@ -410,8 +410,8 @@
 }
 
 .tabs-style-line nav li.tab-current a {
-	box-shadow: inset 0 -2px #2CC185;
-	color: #2CC185;
+	box-shadow: inset 0 -2px #66DEE6;
+	color: #66DEE6;
 }
 
 @media screen and (max-width: 58em) {
@@ -441,7 +441,7 @@
 	margin: -60px 0 0 -60px;
 	width: 120px;
 	height: 120px;
-	border: 1px solid #2CC185;
+	border: 1px solid #66DEE6;
 	border-radius: 50%;
 	content: '';
 	opacity: 0;
@@ -491,7 +491,7 @@
 }
 
 .tabs-style-circle nav li.tab-current a {
-	color: #2CC185;
+	color: #66DEE6;
 }
 
 .tabs-style-circle nav li.tab-current a span {
@@ -575,11 +575,11 @@
 }
 
 .tabs-style-shape nav li a:hover span {
-	background-color: #2CC185;
+	background-color: #66DEE6;
 }
 
 .tabs-style-shape nav li a:hover svg {
-	fill: #2CC185;
+	fill: #66DEE6;
 }
 
 /* Make only shape clickable */
@@ -660,7 +660,7 @@
 
 .tabs-style-linebox nav a:hover,
 .tabs-style-linebox nav a:focus {
-	color: #2CC185;
+	color: #66DEE6;
 }
 
 .tabs-style-linebox nav li.tab-current a {
@@ -692,7 +692,7 @@
 .tabs-style-linebox nav a:hover::after,
 .tabs-style-linebox nav a:focus::after,
 .tabs-style-linebox nav li.tab-current a::after {
-	background: #2CC185;
+	background: #66DEE6;
 }
 
 @media screen and (max-width: 58em) {
@@ -746,7 +746,7 @@ span.tabs-title{
 	z-index: -1;
 	width: 100%;
 	height: 100%;
-	background-color: #70deb9;
+	background-color: #66DEE6;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s, background-color 0.3s;
 	transition: transform 0.3s, background-color 0.3s;
@@ -759,13 +759,13 @@ span.tabs-title{
 }
 
 .tabs-style-flip nav li.tab-current a::after {
-	background-color: #70deb9;
+	background-color: #66DEE6;
 	-webkit-transform: perspective(900px) rotate3d(1,0,0,0deg);
 	transform: perspective(900px) rotate3d(1,0,0,0deg);
 }
 
 .tabs-style-flip .content-wrap {
-	background: #70deb9;
+	background: #66DEE6;
 	float: left;
 	padding: 6px;
 }
@@ -889,7 +889,7 @@ span.tabs-title{
 
 .tabs-style-tzoid nav ul li.tab-current a,
 .tabs-style-tzoid nav ul li.tab-current a:hover {
-	color: #2CC185;
+	color: #66DEE6;
 }
 
 .tabs-style-tzoid nav ul li a span {
@@ -906,7 +906,7 @@ span.tabs-title{
 	z-index: -1;
 	outline: 1px solid transparent;
 	border-radius: 10px 10px 0 0;
-	background: #2CC185;
+	background: #66DEE6;
 	box-shadow: inset 0 -3px 3px rgba(0,0,0,0.05);
 	content: '';
 	-webkit-transform: perspective(5px) rotateX(0.93deg) translateZ(-1px);
@@ -929,12 +929,12 @@ span.tabs-title{
 
 .tabs-style-circlefill {
 	max-width: 700px;
-	border: 1px solid #2CC185;
+	border: 1px solid #66DEE6;
 }
 
 .tabs-style-circlefill nav ul li {
 	overflow: hidden;
-	border-right: 1px solid #2CC185;
+	border-right: 1px solid #66DEE6;
 }
 
 .tabs-style-circlefill nav li a {
@@ -958,9 +958,9 @@ span.tabs-title{
 	margin: -40px 0 0 -40px;
 	width: 80px;
 	height: 80px;
-	border: 1px solid #2CC185;
+	border: 1px solid #66DEE6;
 	border-radius: 50%;
-	background: #2CC185;
+	background: #66DEE6;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
@@ -991,5 +991,5 @@ span.tabs-title{
 }
 
 .tabs-style-circlefill .content-wrap {
-	border-top: 1px solid #2CC185;
+	border-top: 1px solid #66DEE6;
 }
