--- a/css/main.css
+++ b/css/main.css
@@ -1633,7 +1633,7 @@ ul.sub-menu li a {
     width: 100%;
 }
 .our-story-content {
-    background-color: #66DEE6;
+    background-color: rgba(102, 222, 230, 0.8);
     margin-top: 50px;
     height: 400px;
     display: table;
